syntax = "proto3";

package orders;

option go_package = "github.com/vancelongwill/_examples/fullproto/orders";

message OrderCreated {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
}

message OrderCancelled {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
  string cancel_reason = 4;
}

message OrderAudited {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
}

message OrderNameChanged {
  string id = 1;
  int32 version = 2;
  int64 at = 3;
  string first_name = 4;
  string last_name = 5;
}

message event_container {
  int32             type = 1;
  OrderCreated      order_created = 2;
  OrderCancelled    order_cancelled = 3;
  OrderAudited      order_audited = 4;
  OrderNameChanged  order_name_changed = 5;
}