syntax = "proto3";

package orders;

option go_package = "github.com/vancelongwill/_examples/fullproto/orders";

enum OrderState {
    UNKNOWN = 0;
    CREATED = 1;
    SHIPPED = 2;
    CANCELLED = 3;
}

message Aggregate {
  string id = 1;
  int32 version = 2;
  int64 created_at = 3;
  int64 updated_at = 4;
  int64 cancelled_at = 5;
  string name = 6;
  string first_name = 7;
  string last_name = 8;
  OrderState state = 9;
  string cancel_reason=10;
}